Patch for self use

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "mask": "npx tsx app/masks/build.ts",
     "mask:watch": "npx watch \"yarn mask\" app/masks",
-    "dev": "concurrently -r \"yarn run mask:watch\" \"next dev\"",
+    "dev": "concurrently -r \"yarn run mask:watch\" \"next dev -H 0.0.0.0 -p 5000\"",
     "build": "yarn mask && cross-env BUILD_MODE=standalone next build",
-    "start": "next start",
+    "start": "next start -p 5000",
     "lint": "next lint",
     "export": "yarn mask && cross-env BUILD_MODE=export BUILD_APP=1 next build",
     "export:dev": "concurrently -r \"yarn mask:watch\"  \"cross-env BUILD_MODE=export BUILD_APP=1 next dev\"",
